--- a/login.html
+++ b/login.html
@@ -6,43 +6,69 @@
   <title>Iniciar Sesión</title>
   <style>
     body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
       margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-image: url('https://i.supaimg.com/fcdcfffe-ba41-4ce2-a5e2-e1a8d8b9a71a.jpg');
+      background-size: cover;
+      background-position: center;
       font-family: Arial, sans-serif;
-      background: #f2f2f2;
+    }
+    .card {
+      background: rgba(0,0,0,0.7);
+      padding: 30px;
+      border-radius: 20px;
+      width: 90%;
+      max-width: 350px;
+      color: white;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.6);
+    }
+    .card h2 {
+      text-align: center;
+      margin-bottom: 20px;
     }
     input {
-      margin: 10px;
-      padding: 10px;
-      width: 250px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
     }
-    button {
-      margin-top: 20px;
-      padding: 12px 25px;
+    .btn {
+      width: 100%;
+      padding: 14px;
+      margin-top: 15px;
       background: #ff6600;
       color: white;
       border: none;
-      border-radius: 20px;
+      border-radius: 25px;
+      font-size: 18px;
       cursor: pointer;
+      font-weight: bold;
+    }
+    .btn:hover {
+      background: #ff8533;
     }
     a {
+      display: block;
+      text-align: center;
       margin-top: 15px;
-      color: #007bff;
+      color: #ffcc66;
       text-decoration: none;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <h2>Iniciar Sesión</h2>
-  <input type="email" placeholder="Correo electrónico" required>
-  <input type="password" placeholder="Contraseña" required>
-  <button>Entrar</button>
-  <a href="registro.html">¿No tienes cuenta? Regístrate</a>
+  <div class="card">
+    <h2>Iniciar Sesión</h2>
+    <input type="email" placeholder="Correo electrónico" required>
+    <input type="password" placeholder="Contraseña" required>
+    <button class="btn">Entrar</button>
+    <a href="registro.html">¿No tienes cuenta? Regístrate</a>
+  </div>
 </body>
 </html>
