--- a/registro.html
+++ b/registro.html
@@ -6,34 +6,77 @@
   <title>Registro</title>
   <style>
     body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: auto;
-      min-height: 100vh;
       margin: 0;
-      padding: 20px;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-image: url('https://i.supaimg.com/fcdcfffe-ba41-4ce2-a5e2-e1a8d8b9a71a.jpg');
+      background-size: cover;
+      background-position: center;
       font-family: Arial, sans-serif;
-      background: #f2f2f2;
+    }
+    .card {
+      background: rgba(0,0,0,0.75);
+      padding: 25px;
+      border-radius: 20px;
+      width: 90%;
+      max-width: 400px;
+      color: white;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.6);
+    }
+    .card h2 {
+      text-align: center;
+      margin-bottom: 15px;
     }
     input {
-      margin: 10px;
-      padding: 10px;
-      width: 250px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
+      width: 100%;
+      padding: 12px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 10px;
+      font-size: 15px;
     }
     label {
-      margin: 10px;
-      font-size: 14px;
+      display: block;
+      font-size: 13px;
+      margin-top: 10px;
     }
-    button {
+    .btn {
+      width: 100%;
+      padding: 14px;
       margin-top: 20px;
-      padding: 12px 25px;
       background: #ff6600;
       color: white;
       border: none;
+      border-radius: 25px;
+      font-size: 18px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .btn:hover {
+      background: #ff8533;
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h2>Registro</h2>
+    <input type="text" placeholder="Nombre" required>
+    <input type="text" placeholder="Apellido" required>
+    <input type="email" placeholder="Correo electrónico" required>
+    <input type="password" placeholder="Contraseña" required>
+    <input type="number" placeholder="Edad (mínimo 18)" min="18" required>
+    
+    <label>
+      <input type="checkbox" required>
+      Acepto los términos y políticas
+    </label>
+
+    <button class="btn">Registrarse</button>
+  </div>
+</body>
+</html>
       border-radius: 20px;
       cursor: pointer;
     }
