--- a/registro.html
+++ b/registro.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      min-height: 100vh;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -18,7 +18,7 @@
     }
     .card {
       background: rgba(0,0,0,0.75);
-      padding: 25px;
+      padding: 30px;
       border-radius: 20px;
       width: 90%;
       max-width: 400px;
@@ -27,12 +27,12 @@
     }
     .card h2 {
       text-align: center;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
     }
     input {
       width: 100%;
       padding: 12px;
-      margin: 8px 0;
+      margin: 10px 0;
       border: none;
       border-radius: 10px;
       font-size: 15px;
@@ -75,26 +75,5 @@
 
     <button class="btn">Registrarse</button>
   </div>
-</body>
-</html>
-      border-radius: 20px;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-  <h2>Registro</h2>
-  <input type="text" placeholder="Nombre" required>
-  <input type="text" placeholder="Apellido" required>
-  <input type="email" placeholder="Correo electrónico" required>
-  <input type="password" placeholder="Contraseña" required>
-  <input type="number" placeholder="Edad" min="18" required>
-  
-  <label>
-    <input type="checkbox" required>
-    Acepto los términos y políticas
-  </label>
-
-  <button>Registrarse</button>
 </body>
 </html>
